--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
 <h1>My Website about Processing</h1>
-   	<p>We use Processing with Java in Progcessing Fundamentas at Trevor.Yay!</p>
+  <p>We use <b>Processing</b> with <u>Java</u> in Progcessing Fundamentas at Trevor.Yay!</p>
  </body>
 </html>
 
