--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>My Website about Processing</h1>
   <p>We use <b>Processing</b> with <u>Java</u> in Progcessing Fundamentas at Trevor.Yay!</p>
   <p><a href="https://processing.org/">link text</a></p>
+  <p><img src="flixxy.com/funny-animals-compilation-image10.jpg" alt="hi" style="width:800px;height:530px;"></p>
  </body>
 </html>
 
