fixing image issue

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  <body>
 <h1>My Website about Processing</h1>
   <p>We use <b>Processing</b> with <u>Java</u> in Progcessing Fundamentas at Trevor.Yay!</p>
-  <p><a href="https://processing.org/">link text</a></p>
-  <p><img src="flixxy.com/funny-animals-compilation-image10.jpg" alt="hi" style="width:800px;height:530px;"></p>
+  <p><a href="https://processing.org/">processing</a></p>
+  <p><img src="https://www.flixxy.com/funny-animals-compilation-image10.jpg" alt="hi" style="width:800px;height:530px;"></p>
  </body>
 </html>
 
