--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <p><a href="https://processing.org/">processing</a></p>
   <p><img src="https://www.flixxy.com/funny-animals-compilation-image10.jpg" alt="hi" style="width:800px;height:530px;"></p>
   <p><font color="red">Red Text!!</font></p>
+  <p><button>do NOT click!!</button></p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/YqaacQc6sho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
  <body bgcolor="FF2986">
 </html>
