--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <p><font color="red">Red Text!!</font></p>
   <p><button>do NOT click!!</button></p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/YqaacQc6sho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+  <ul>
+  <li>Red</li>
+  <li>Orange</li>
+  <li>Yellow</li>
+  <li>Green</li>
+  <li>Blue</li>
+</ul>
  <body bgcolor="FF2986">
 </html>
 
